cpp/test/Slice/errorDetection/NotClassOrInterface.err
NotClassOrInterface.ice:12: `Seq' is not an interface
NotClassOrInterface.ice:13: `Seq' is not a class
NotClassOrInterface.ice:14: `Sequence1' is not a class
NotClassOrInterface.ice:14: syntax error
NotClassOrInterface.ice:16: syntax error
